<?xml version="1.0" encoding="utf-8"?>


<!---->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".MainPageActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="@string/restaurant_name"
        android:textColor="@color/colorGold"
        android:textSize="28sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textStyle="italic"
        android:textSize="20sp"
        android:textColor="@color/colorDeepGrey"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="3.0"
        android:shadowColor="@color/colorLightGrey"
        android:paddingLeft="@dimen/activity_horizontal_margin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guid"
        android:textStyle="italic"
        android:textSize="20sp"
        android:textColor="@color/colorDeepGrey"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="3.0"
        android:shadowColor="@color/colorLightGrey"
        android:paddingLeft="@dimen/activity_horizontal_margin"/>

    <View
        android:layout_width="500dp"
        android:layout_height="2dp"
        android:paddingTop="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:background="@color/colorDeepGrey"/>


    <!--Items list-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:paddingTop="20dp"
        android:orientation="vertical">

        <!-- burgers -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/burgers" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/item1Price" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:layout_weight="3">

                <!-- TODO: adjust button position-->
                <Button
                    android:id="@+id/minusBurger"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:paddingTop="10dp"
                    android:paddingLeft="5dp"
                    android:background="@drawable/minus" />

                <Button
                    android:id="@+id/plusBurger"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/plus"
                    android:paddingLeft="5dp" />

            </LinearLayout>


        </LinearLayout>

        <!-- chickens -->
        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/chicken" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/item2Price" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:layout_weight="3">

                <Button
                    android:id="@+id/minusChicken"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:paddingTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/minus" />

                <Button
                    android:id="@+id/plusChicken"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/plus"
                    android:paddingLeft="10dp" />
            </LinearLayout>


        </LinearLayout>

        <!-- fries -->
        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/fries" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/item3Price" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:layout_weight="3">

                <Button
                    android:id="@+id/minusFries"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:paddingTop="10dp"
                    android:paddingLeft="5dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/minus" />

                <Button
                    android:id="@+id/plusFries"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/plus"
                    android:paddingLeft="10dp" />
            </LinearLayout>


        </LinearLayout>

        <!-- Onion Rings-->
        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/onion_ring" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/item4Price" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:layout_weight="3">

                <Button
                    android:id="@+id/minusOnionRing"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:paddingTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/minus" />

                <Button
                    android:id="@+id/plusOnionRing"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/plus"
                    android:paddingLeft="10dp" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:layout_gravity="center_vertical">

        <!-- line 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingRight="130dp"
            android:paddingLeft="130dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_weight="4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item1"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="x"/>
            <TextView
                android:id="@+id/burgerNum"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"/>
        </LinearLayout>

        <!-- line 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingRight="130dp"
            android:paddingLeft="130dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_weight="4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item2"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="x"/>
            <TextView
                android:id="@+id/chickenNum"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"/>
        </LinearLayout>

        <!-- line 3 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingRight="130dp"
            android:paddingLeft="130dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_weight="4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item3"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="x"/>
            <TextView
                android:id="@+id/friesNum"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"/>
        </LinearLayout>

        <!-- line 4 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingRight="130dp"
            android:paddingLeft="130dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_weight="4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item4"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="x"/>
            <TextView
                android:id="@+id/onionRingNum"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"/>
        </LinearLayout>

        <!-- total -->
        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="250dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total:  $ "/>

            <TextView
                android:id="@+id/totalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0"/>
        </LinearLayout>


    </LinearLayout>

    <!-- place order and bottom buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/placeOrder"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/place_order_round"
            android:textColor="@color/colorGreyWhite"
            android:text="place order"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/customer"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Customer"/>
            <Button
                android:layout_weight="1"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/orderList"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="order list"/>


        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>





<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context=".MainPageActivity">-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Hello World!"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

<!--</android.support.constraint.ConstraintLayout>-->